--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "report": "allure generate --clean && allure open",
     "clean": "rm -rf allure-results",
     "smoke": "npm run clean && wdio smoke.conf.js && npm run report"
-
   },
   "repository": {
     "type": "git",
@@ -22,7 +21,12 @@
   },
   "homepage": "https://github.com/IrinaWilliams/GoodRx#readme",
   "dependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/register": "^7.6.0",
     "@wdio/cli": "^5.13.0",
+    "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "webdriverio": "^5.13.0"
   },
